# ebglvis

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  TODO.rst  glutil.cpp  glutil.hpp  main.cpp  shader.cpp  shader.hpp
davis/: CMakeLists.txt  README.rst  davis.c  davis.h
shaders/: fragment.glsl  vertex.glsl
