CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ebglvis)

ADD_DEFINITIONS(-std=c++11)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_C_FLAGS	"${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

SET(particles_SOURCES
	main.cpp
	shader.cpp
)
SET(particles_HEADERS
	shader.hpp
	glutil.hpp
)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME}
	${particles_SOURCES}
	${particles_HEADERS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	m
	pthread
	${OPENGL_LIBRARIES}
	${GLFW_LIBRARIES}
	${GLEW_LIBRARIES}
	${GLM_LIBRARIES}
)
