CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ebglvis)

ADD_DEFINITIONS(-std=c++11)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_C_FLAGS	"${CMAKE_C_FLAGS} -Wall -Wextra -pedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

SET(ebglvis_SOURCES
	main.cpp
	shader.cpp
	glutil.cpp
)
SET(ebglvis_HEADERS
	shader.hpp
	glutil.hpp
)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

FIND_LIBRARY(EDVS_LIBRARY Edvs edvstools/build/bin)

INCLUDE_DIRECTORIES(
	${GLFW_INCLUDE_DIRS}
	edvstools
)

ADD_EXECUTABLE(${PROJECT_NAME}
	${ebglvis_SOURCES}
	${ebglvis_HEADERS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	m
	pthread
	${OPENGL_LIBRARIES}
	${GLFW_LIBRARIES}
	${GLEW_LIBRARIES}
	${GLM_LIBRARIES}
	${EDVS_LIBRARY}
)
